# strif

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  README.md  development.md  publishing.md  pyproject.toml  setup.py  strif.py
.github/workflows/: ci.yml  publish.yml
devtools/: lint.py
src/strif/: __init__.py  atomic_var.py  strif.py  string_replace.py  string_template.py
tests/: test_formatting.py  test_hash.py  test_string_replace.py  test_string_template.py
