# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/jlevy/strif"
# Homepage = "https://..."

[project]
name = "strif"
description = "Tiny, useful Python lib for strings and files"
authors = [
    { name="Joshua Levy", email="joshua@cal.berkeley.edu" },
]
readme = "README.md"
license = "MIT"

requires-python = ">=3.11,<4.0"
dynamic = ["version"]

dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "codespell>=2.4.1",
    "rich>=13.9.4",
]

[project.scripts]
# Add script entry points here.
# strif = "strif:main"

# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = "true"


# ---- Settings ----

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade   
    "B", # flake8-bugbear
    "I", # isort
    # "SIM", # flake8-simplify
]
ignore = [
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
]


[tool.mypy]
disable_error_code = [
    "import-untyped",
]

[tool.codespell]
# ignore-words-list = "foo,bar"
# skip = "foo.py,bar.py"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "src",
    "tests",
]
norecursedirs = []
filterwarnings = []
